# muan

./: CMakeLists.txt  README.md  README.original  build.sh
data/devel/: muan-arch.txt  muan-mods.txt  muan-tree.txt
data/doc/: mainpage.dxy  muan_doxygen.cfg  sections.dxy
data/manual/: muan_ae_en.html  muan_ae_pt.html  muan_ae_sp.html  muan_os_en.html  muan_os_pt.html  muan_player_en.html  muan_player_pt.html  muan_player_sp.html
data/res/: muan.icns
debian/: changelog  control  copyright  postinst  rules
extra/cmake-modules/: FindDC1394.cmake
pack/debian/: postinst  preinst  prerm
src/: CMakeLists.txt  TO_CHANGE.txt
src/base/: CMakeLists.txt
src/base/common/: CMakeLists.txt  beep.h  defaults.cpp  defaults.h  imgviewer.cpp  imgviewer.h  lang_ui.h  sndfile-play.cpp  sndfile-play.h  video_encoder.cpp  video_encoder.h
src/base/filter/: CMakeLists.txt  builtins.cpp  builtins.h  filter.cpp  filter.h  luaplug.cpp  luaplug.h  plugin.cpp  plugin.h
src/base/image/: CMakeLists.txt  image.c  image.h  laux.c  laux.h
src/base/imglist/: CMakeLists.txt  frame.cpp  frame.h  imglist.cpp  imglist.h  imgnode.cpp
src/base/video/: CMakeLists.txt  video.cpp  video.h
src/ext/: CMakeLists.txt
src/ext/dc1394/: Makefile.in
src/ext/dc1394/juju/: Makefile.in
src/ext/dc1394/linux/: Makefile.in
src/ext/dc1394/msw/: Makefile.in
src/ext/dc1394/usb/: Makefile.in
src/ext/dslib/: readme.txt
src/ext/dslib/win32/: DSVL.lib  DSVLd.lib
src/ext/dv1394/: CMakeLists.txt  config.h  error.h  frame.h  preferences.h
src/ext/fltk/linux/amd64/fluid/: fluid
src/ext/fltk/linux/i386/fluid/: fluid
src/ext/fltk/macos/fluid/: fluid
src/ext/fltk/win32/lib/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_zlib.lib
src/ext/fltk/win32/lib/FLTK-1.1/: FLTKBuildSettings.cmake  FLTKConfig.cmake  FLTKLibraryDepends.cmake
src/ext/libjpeg/: CMakeLists.txt
src/ext/lua/lua-5.2.0/src/: Makefile
src/ext/lua/win32/lib/: lua.lib
src/ext/sfml/win32/lib/: sfml-audio.lib  sfml-system.lib
src/ext/tinyxml/: CMakeLists.txt
src/ext/win32/misc/: unistd.h
src/proj/: CMakeLists.txt
src/proj/ae/: CMakeLists.txt  main_ae.cpp  muan_ae_win32.rc  ui_ae.fl
src/proj/inc/: muan_ui.h  settings.h
src/proj/os/: CMakeLists.txt  main.cpp  ui.fl
src/proj/pl/: CMakeLists.txt  lang_ui_player.h  main_player.cpp  ui_player.fl
src/proj/plugins/: CMakeLists.txt
src/proj/plugins/camera/: mirror.lua  motiondetect.lua  negative.lua  showmotion.lua  timelapse.lua
src/proj/plugins/memory/: fadeout.lua  negative.lua  trail.lua
src/proj/share/: CMakeLists.txt  muan.desktop  muan.directory  muan_conf.xml  release-notes.txt
src/std/: CMakeLists.txt
src/std/ffmpeg/: CMakeLists.txt  ffmpeg_rw.c  ffmpeg_rw.h
src/std/jpeg/: CMakeLists.txt  jpeg.c  jpeg.h
src/std/portvideo/: CMakeLists.txt
src/std/portvideo/common/: CameraEngine.cpp  CameraTool.cpp  FileCamera.cpp  RingBuffer.cpp
src/std/portvideo/devel/: TemplateCamera.cpp  TemplateCamera.h
src/std/portvideo/include/: CameraEngine.h  CameraTool.h  DC1394Camera.h  DSlibCamera.h  DV1394Camera.h  FileCamera.h  GStreamerCamera.h  MacVdigCamera.h  RingBuffer.h  V4Linux2Camera.h  VdigGrab.h
src/std/portvideo/linux/: DC1394Camera.cpp  DV1394Camera.cpp  GStreamerCamera.cpp  V4Linux2Camera.cpp
src/std/portvideo/macosx/: MacVdigCamera.cpp  VdigGrab.c
src/std/portvideo/win32/: DSlibCamera.cpp  resource.h
